syntax = "proto3";
package message ;

message Message {
  oneof req_or_resp {
    Request req = 1;
    Response resp = 2;
  }
}

message Request {
  uint64 req_id = 1;
  oneof request {
    GetBlocksByNumRequest get_blocks_by_num_request = 2;
    GetEpochStateRequest get_epoch_state_request = 3;
    GetBlockNumberRequest get_block_number_request = 4;
  }
}

message GetBlocksByNumRequest {
  repeated uint64 nums = 1 [packed=true];
}

message GetEpochStateRequest {
  uint64 epoch = 1;
}

message GetBlockNumberRequest {}


message Response {
  uint64 req_id = 1;
  oneof response {
      ErrorResponse error_response = 2;
      GetBlocksByNumResponse get_blocks_by_num_response = 3;
      GetEpochStateResponse get_epoch_state_response = 4;
      GetBlockNumberResponse get_block_number_response = 5;
  }
}

message GetBlocksByNumResponse {
  repeated bytes blocks_bytes = 1;
}

message ErrorResponse {
  string error = 1;
}

message GetEpochStateResponse {
  bytes header_bytes = 1;
  bytes shard_state = 2;
}

message GetBlockNumberResponse {
  uint64 number = 1;
}
